Restructured into google app engine and jinja 2 templating

--- a/HTML/PhysicalLimitations.html
+++ b/HTML/PhysicalLimitations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <meta charset="UTF-8">
     <title></title>
 </head>
@@ -12,10 +12,12 @@
     <h1 class="informationHeader">The Physical Limitations of Artificial Intelligence</h1>
 
     <div class="informationParagraphs">
-
+        <p>
         The average human brain has 100 billion neurons. Each neuron may have up to 7,000 connections to other neurons.
         Each neuron fires about 200 times a second. Since the neurons are slow firing, they work concurrently with each other.
         In comparison, a computer can perform several billion operations per second.
+        </p>
+        <p>
         Current estimates believe that if a computer could be constructed that is about 10,000 times faster than a desktop computer, that it can hold the computational ability of a human brain.
         Today's limitations exist not from hardware, but from software. No one knows how to write the software.
         Essentially, human DNA is the software for the human brain.
@@ -23,11 +25,13 @@
         Using DNA as a reference for software, only about 10% of the DNA makes up the intelligence portion of the thought process.
         Most of a person's DNA are the leftovers from evolution.
         Under this assumption, the potential difference in software between chimpanzees and humans could be as little as 0.01 MB of space.
+        </p>
+        <p>
         The 1970's SHRDLU computer AI showed the parsing of language and learning from human interaction.
         Computers lack the ability to learn through senses such as touching, for instance the description of a feather can be programmed, but the physical object itself is what makes a feather.
         However, robots can locate and identify real objects by looking up images of them on the internet
         We do not know for sure, but it is unlikely, that the human brain operates at quantum level
-
+        </p>
     </div>
 
 </div>
