--- a/HTML/PhysicalLimitations.html
+++ b/HTML/PhysicalLimitations.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="../css/styles.css">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "master.html" %}
+
+{% block title %} Physical Limitations {% endblock %}
+
+{% block head %}
+
+<link rel="stylesheet" href="../css/desc.css">
+
+{% endblock %}
+
+{% block content %}
+
 
 <div class="information">
 
@@ -36,6 +40,4 @@
 
 </div>
 
-
-</body>
-</html>
+{% endblock %}
