Adding bunch of text

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,8 +1,10 @@
 {% extends "master.html" %}
 
-{% block title %} Physical Limitations {% endblock %}
+{% block title %} About {% endblock %}
 
 {% block head %}
+
+<link rel="stylesheet" href="../css/desc.css">
 
 {% endblock %}
 
