--- a/HTML/Morality.html
+++ b/HTML/Morality.html
@@ -1,14 +1,52 @@
 {% extends "master.html" %}
 
-{% block title %} Physical Limitations {% endblock %}
+{% block title %} Morality {% endblock %}
 
 {% block head %}
+
+<link rel="stylesheet" href="../css/desc.css">
 
 {% endblock %}
 
 {% block content %}
 
-<!--Place HTML content here-->
+<div class="information">
+
+    <h1 class="informationHeader">Robots morality (Machine Ethics)</h1>
+
+    <div class="informationParagraphs">
+        <p>
+
+            Robots, intended as autonomous electro-mechanical machines, have been theorized and studied for over a century.
+            Today, thanks to the advancements in technology, robots are becoming a real-ity.
+            We have the hardware, but we are still lacking with the software.
+            Unmanned aerial vehicles (drones) used by the military still require a human operator to make ethical decisions.
+        </p>
+        <p>
+            To address these concerns, new fields of research have been formed:
+            Roboethics refers to the morality of how humans design, construct, use and treat robots and other artificially intelligent beings.
+            The first symposium on this matter was held in 2004.
+            Machine Ethics refers to the moral behavior of artificially intelligent beings.
+        </p>
+        <p>
+            Most researchers agree on the fact that robots cannot have a conscience.
+            They main question of today is: can robots be programmed to make ethical decisions? Is ethics even computable?
+            Absolute rules are definitely computable, but we humans never deal in absolutes when making a decision.
+            As our legal system proves, there are a lot of grey areas, exceptions and contradictions that play a role when making a decision in a court of law.
+        </p>
+        <p>
+            In 2011, the Engineering and Physical Sciences Research Council (EPRSC) and the Arts and Hu-manities Research Council (AHRC) of Great Britain
+            jointly published a set of five ethical "principles for designers, builders and users of robots"
+        </p>
+        <p>
+            The research in Robot morality is considered a top priority by prominent figures of the techno-logical world,
+            fearing the creation of the singularity, a sentient being capable of recursive self-improving.
+            Some of them consider the AI more dangerous than nuclear weapons.
+        </p>
+
+    </div>
+
+</div>
 
 
 {% endblock %}
