--- a/HTML/PolicyVacuums.html
+++ b/HTML/PolicyVacuums.html
@@ -12,29 +12,46 @@
 
 <div class="information">
 
-    <h1 class="informationHeader">The Physical Limitations of Artificial Intelligence</h1>
+    <h1 class="informationHeader">Policy Vacuums</h1>
 
     <div class="informationParagraphs">
         <p>
-            The average human brain has 100 billion neurons. Each neuron may have up to 7,000 connections to other neurons.
-            Each neuron fires about 200 times a second. Since the neurons are slow firing, they work concurrently with each other.
-            In comparison, a computer can perform several billion operations per second.
+            Open letter from some of the world’s top scientists that say that piloting drones and the stuff like that is ok because
+            it’s still the human’s decision, but autonomous machines that kill should be banned.
         </p>
         <p>
-            Current estimates believe that if a computer could be constructed that is about 10,000 times faster than a desktop computer, that it can hold the computational ability of a human brain.
-            Today's limitations exist not from hardware, but from software. No one knows how to write the software.
-            Essentially, human DNA is the software for the human brain.
-            An entire person's DNA contains 3 billion base pairs, which can fit onto a CD (~700 MB).
-            Using DNA as a reference for software, only about 10% of the DNA makes up the intelligence portion of the thought process.
-            Most of a person's DNA are the leftovers from evolution.
-            Under this assumption, the potential difference in software between chimpanzees and humans could be as little as 0.01 MB of space.
+            “Autonomous and semi-autonomous weapon systems shall be designed to allow commanders and operators to exercise appropriate
+            levels of human judgement over the use of force.”
+            “Human supervised autonomous weapons systems may be used to select and engage targets, with the exception of human targets,
+            for local defense to intercept time critical or saturation attempts. . .”
         </p>
         <p>
-            The 1970's SHRDLU computer AI showed the parsing of language and learning from human interaction.
-            Computers lack the ability to learn through senses such as touching, for instance the description of a feather can be programmed, but the physical object itself is what makes a feather.
-            However, robots can locate and identify real objects by looking up images of them on the internet
-            We do not know for sure, but it is unlikely, that the human brain operates at quantum level
+            The above two quotes were ones that I found to be very significant when it came to the policies that are associated with AI.
+            I pulled them straight from a document released by the US Department of Defense around 2012. The entire document deals with laws and
+            policies which will govern how the military should handle these autonomous robots, but misses a lot of key points about what we should do
+            in what situations. Like who does get blamed if a robot does kill a human being? What if the commander is unable to stop the robot? What then?
+            There’s a section on what portion is responsible for the upkeep and hiring of personnel but nothing on training soldiers on the machines.
         </p>
+        <p>
+            open letter to the military sent by the top AI researchers around the world (http://futureoflife.org/ai-open-letter/)
+        </p>
+        <p>
+            The Three Laws of Robotics
+            1.)	A robot may not injure a human being or, through inaction, allow a human being to
+            come to harm.
+            2.)	A robot must obey orders given it by human beings except where such orders go against the first law.
+            3.)	A robot must protect its own existence as long as such protection does not conflict with
+            the first and second laws.
+        </p>
+
+        <p>
+            I read an interesting article that talked generally about the ideas of AI and how we need to beware of the dangers of it.
+            Well an interesting portion of this article dealt with the three laws which I have above and talked about how they were much too simple
+            for the problems we have with robotics nowadays. Because robots can be built for a multitude of things (including war), the laws may not
+            apply to every robot, and involve a lot of contradictions involving “over-protection” and things like that.
+        </p>
+
+
     </div>
 
 </div>
