youtube video in main page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,10 @@
 
 {% block content %}
 
-<!--Place HTML content here-->
-
+<div class="information">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sghATzBxguw"
+            frameborder="0" allowfullscreen autoplay="1">
+    </iframe>
+</div>
 
 {% endblock %}
