--- a/HTML/Morality.html
+++ b/HTML/Morality.html
@@ -18,12 +18,17 @@
         <p>
 
             Robots, intended as autonomous electro-mechanical machines, have been theorized and studied for over a century.
-            Today, thanks to the advancements in technology, robots are becoming a real-ity.
+            Today, thanks to the advancements in technology, robots are becoming a reality.
             We have the hardware, but we are still lacking with the software.
             Unmanned aerial vehicles (drones) used by the military still require a human operator to make ethical decisions.
         </p>
         <p>
             To address these concerns, new fields of research have been formed:
+        </p>
+        <p>
+            
+        </p>
+        <p>
             Roboethics refers to the morality of how humans design, construct, use and treat robots and other artificially intelligent beings.
             The first symposium on this matter was held in 2004.
             Machine Ethics refers to the moral behavior of artificially intelligent beings.
