robotic font on top and side bar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %} Physical Limitations {% endblock %}
+{% block title %} Home {% endblock %}
 
 {% block head %}
 
