resize imgs automatically

--- a/HTML/Morality.html
+++ b/HTML/Morality.html
@@ -26,7 +26,7 @@
             To address these concerns, new fields of research have been formed:
         </p>
         <p>
-            <img src="../content/13.png" style="width:323px;height:256px;">
+            <img src="../content/13.png">
         </p>
         <p>
             <b>Roboethics</b> refer to the morality of how humans design, construct, use and treat robots and other artificially intelligent beings.
@@ -40,7 +40,9 @@
             As our legal system proves, there are a lot of grey areas, exceptions and contradictions that play a role when making a decision in a court of law.
         </p>
         <p>
-            <img src="../content/12.png" style="width:392px;height:269px;">
+            </br>
+            <img src="../content/12.png">
+            </br>
         </p>
         <p>
             In 2011, the Engineering and Physical Sciences Research Council (EPRSC) and the Arts and Humanities Research Council (AHRC) of Great Britain
@@ -59,7 +61,7 @@
             Some of them consider the AI more dangerous than nuclear weapons.
         </p>
         <p>
-            <img src="../content/16.png" style="width:410px;height:292px;">
+            <img src="../content/16.png">
         </p>
 
     </div>
