--- a/HTML/master.html
+++ b/HTML/master.html
@@ -15,6 +15,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/sources">Sources</a></li>
+        <li><a href="/video">The Video</a></li>
     </ul>
 </div>
 
