centered video and pictures

--- a/HTML/Morality.html
+++ b/HTML/Morality.html
@@ -16,7 +16,6 @@
 
     <div class="informationParagraphs">
         <p>
-
             Robots, intended as autonomous electro-mechanical machines, have been theorized and studied for over a century.
             Today, thanks to the advancements in technology, robots are becoming a reality.
             We have the hardware, but we are still lacking with the software.
@@ -25,7 +24,7 @@
         <p>
             To address these concerns, new fields of research have been formed:
         </p>
-        <p>
+        <p align="center">
             <img src="../content/13.png">
         </p>
         <p>
@@ -39,7 +38,7 @@
             Absolute rules are definitely computable, but we humans never deal in absolutes when making a decision.
             As our legal system proves, there are a lot of grey areas, exceptions and contradictions that play a role when making a decision in a court of law.
         </p>
-        <p>
+        <p  align="center">
             </br>
             <img src="../content/12.png">
             </br>
@@ -60,7 +59,7 @@
             fearing the creation of the singularity, a sentient being capable of recursive self-improving.
             Some of them consider the AI more dangerous than nuclear weapons.
         </p>
-        <p>
+        <p align="center">
             <img src="../content/16.png">
         </p>
 
