--- a/HTML/video.html
+++ b/HTML/video.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %} Physical Limitations {% endblock %}
+{% block title %} The Video {% endblock %}
 
 {% block head %}
 
@@ -10,12 +10,8 @@
 
 {% block content %}
 
-<!--Place HTML content here-->
-
-<div class="information">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/sghATzBxguw"
-            frameborder="0" allowfullscreen autoplay="1">
-    </iframe>
+<div align="center">
+    <iframe width="853" height="480" src="https://www.youtube.com/embed/sghATzBxguw?rel=0&amp;autoplay=1&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 {% endblock %}
