CSS and fonts : redid directories and paths master.html: new paths main.py: double path handling for /topics/type

--- a/HTML/master.html
+++ b/HTML/master.html
@@ -21,11 +21,11 @@
 
 <div class="sideBar">
     <ul>Topics
-        <li><a href="/Morality">Morality</a></li>
-        <li><a href="/Frameworks">Frameworks</a></li>
-        <li><a href="/Challenges">Challenges</a></li>
-        <li><a href="/PolicyVacuums">Policy Vacuums</a></li>
-        <li><a href="/PhysicalLimitations">Physical Limitations</a></li>
+        <li><a href="/topics/Morality">Morality</a></li>
+        <li><a href="/topics/Frameworks">Frameworks</a></li>
+        <li><a href="/topics/Challenges">Challenges</a></li>
+        <li><a href="/topics/PolicyVacuums">Policy Vacuums</a></li>
+        <li><a href="/topics/PhysicalLimitations">Physical Limitations</a></li>
     </ul>
 </div>
 
