Redid directories and path structures, added CSS for sources, added sources page, removed works cited page (duplicate), moved duplicate policy vacuum to drafts folder

--- a/HTML/Morality.html
+++ b/HTML/Morality.html
@@ -25,7 +25,7 @@
             To address these concerns, new fields of research have been formed:
         </p>
         <p align="center">
-            <img src="../content/13.png">
+            <img src="../content/morality/13.png">
         </p>
         <p>
             <b>Roboethics</b> refer to the morality of how humans design, construct, use and treat robots and other artificially intelligent beings.
@@ -40,7 +40,7 @@
         </p>
         <p  align="center">
             </br>
-            <img src="../content/12.png">
+            <img src="../content/morality/12.png">
             </br>
         </p>
         <p>
@@ -60,7 +60,7 @@
             Some of them consider the AI more dangerous than nuclear weapons.
         </p>
         <p align="center">
-            <img src="../content/16.png">
+            <img src="../content/morality/16.png">
         </p>
 
     </div>
