--- a/HTML/PhysicalLimitations.html
+++ b/HTML/PhysicalLimitations.html
@@ -33,9 +33,22 @@
         <p>
         The 1970's SHRDLU computer AI showed the parsing of language and learning from human interaction.
         Computers lack the ability to learn through senses such as touching, for instance the description of a feather can be programmed, but the physical object itself is what makes a feather.
-        However, robots can locate and identify real objects by looking up images of them on the internet
-        We do not know for sure, but it is unlikely, that the human brain operates at quantum level
+        However, robots can locate and identify real objects by looking up images of them on the internet.
+        Computers theoretically will be able to operate at a quantum level.
+        In comparison, it is unlikely, that the human brain operates at the quantum level.
         </p>
+        <p>
+        Google's self driving car is a very good representation of a long-term study with artificial intelligence in real world scenarios.
+        Sensors detect objects and are passed into the software, which determines objects based on their size, shape, and movement pattern.
+        <a href="https://www.google.com/selfdrivingcar/how/">Google's about page has a great explanation of how the car interacts with its environment.</a>
+        <img src="../content/limitations/google-self-driven-car_fig1.jpg" alt="SelfDrivingCar">
+        </p>
+        <p>
+        Google's director of engineering, Ray Kurzweil, in 2014, suggested that the only way it would be possible construct humanistic artificial intelligence, would be by mapping the entire human brain to the sub-cellular level.
+        He further believes it may be possible to complete this entire mapping between the years 2020 to 2030.
+        </p>
+
+
     </div>
 
 
