--- a/HTML/master.html
+++ b/HTML/master.html
@@ -12,10 +12,10 @@
 
 <div class="topBar">
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/video">The Video</a></li>
-        <li><a href="/sources">Sources</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/video">THE VIDEO</a></li>
+        <li><a href="/sources">SOURCES</a></li>
+        <li><a href="/about">ABOUT</a></li>
     </ul>
 </div>
 
