--- a/HTML/sources.html
+++ b/HTML/sources.html
@@ -23,7 +23,7 @@
                 <li><a href = "http://www.roboethics.org/sanremo2004/index.php">(More Robo Ethics)</a></li>
                 <li><a href = "http://en.wikipedia.org/wiki/Machine ethics">(Macine Ethics)</a></li>
                 <li><a href = "http://ieexplore.ieee.org/xpl/articleDetails.jsp?arnumber=1667948">(More Machine Ethics)</a></li>
-                <li><a href = "http://www.nickbostrom.com/ethics/artificial-intelligence.pdf">(Bostrom Article on Robot Morality></a></li>
+                <li><a href = "http://www.nickbostrom.com/ethics/artificial-intelligence.pdf">(Bostrom Article on Robot Morality)</a></li>
                 <li><a href = "http://observer.com/2015/08/stephen-hawking-elon-musk-and-bill-gates-warn-about-artificial-intelligence/">(The Warning)</a></li>
             </ul>
         </div>
