Edited homepage, added video CSS, edited video page style

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,9 +5,32 @@
 {% block head %}
 
 <link rel="stylesheet" href="../css/desc.css">
+<link rel="stylesheet" href="../css/home.css">
 
 {% endblock %}
 
 {% block content %}
+
+
+<div class="information">
+
+    <h1 class="informationHeader">CS395 - Ethics of Artificial Intelligence</h1>
+
+    <div class="informationParagraphs">
+        <p>
+            Welcome to our website,
+        </p>
+        <p>
+            The goal of our project is to discuss ethical concerns surrounding artificial intelligence with regards to its militaristic characteristics.
+            We aim to analyze the morality, frameworks, challenges, policy vacuums, and physical limitations, that are being produced from the development of such technologies.
+            With in-depth detail and evidence, we will convey our standpoint on this topic.
+        </p>
+        <p>
+            The top navigation bar details primary viewpoints, with our overall product being "The Video."
+            In our video, we propose the aforementioned concerns and come to a conclusion after all issues have been considered and discussed.
+            On the left navigation bar, we present our summaries for each subtopic of the overall product.
+        </p>
+    </div>
+</div>
 
 {% endblock %}
