--- a/HTML/video.html
+++ b/HTML/video.html
@@ -5,13 +5,16 @@
 {% block head %}
 
 <link rel="stylesheet" href="../css/desc.css">
+<link rel="stylesheet" href="../css/video.css">
 
 {% endblock %}
 
 {% block content %}
 
-<div align="center">
-    <iframe width="853" height="480" src="https://www.youtube.com/embed/sghATzBxguw?rel=0&amp;autoplay=1&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+<div class="information">
+    <div class="video" align="center">
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/sghATzBxguw?rel=0&amp;autoplay=1&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+    </div>
 </div>
 
 {% endblock %}
