--- a/HTML/video.html
+++ b/HTML/video.html
@@ -13,6 +13,7 @@
 
 <div class="information">
     <div class="video" align="center">
+        <!--possible new size: 1000x563-->
         <iframe width="853" height="480" src="https://www.youtube.com/embed/sghATzBxguw?rel=0&amp;autoplay=1&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
