--- a/HTML/about.html
+++ b/HTML/about.html
@@ -12,5 +12,19 @@
 
 <!--Place HTML content here-->
 
+<div class="information">
+
+    <h1 class="informationHeader">The Contributors</h1>
+
+    <div class="informationParagraphs">
+        <p>
+        <p>Name1</p>
+        <p>Name2</p>
+        <p>Name3</p>
+        <p>Name4</p>
+        <p>Angelo Poulos - From Chicago, Illinois, is a current student at UWM, studying Computer Science.</p>
+    </div>
+
+</div>
 
 {% endblock %}
