Fixed error handling, added in 404 error handling for certain stuff

--- a/HTML/error.html
+++ b/HTML/error.html
@@ -13,7 +13,8 @@
 <div class="information">
 
     <div class="informationParagraphs">
-        <p>Sorry, that page was not found.</p>
+        <h1 class="informationHeader">A 404 Error!</h1>
+        <p>Oops, sorry, that page was not found.</p>
     </div>
 </div>
 
