--- a/HTML/about.html
+++ b/HTML/about.html
@@ -17,14 +17,12 @@
     <h1 class="informationHeader">The Contributors</h1>
 
     <div class="informationParagraphs">
-        <p>
-        <p>Name1</p>
-        <p>Name2</p>
-        <p>Name3</p>
-        <p>Name4</p>
+        <p>Cooper Patton - Midwest born Computer Science student trying to make his mark on the world</p>
+        <p>Vincenzo Mustich - from Brindisi, Italy has been living in Milwaukee for the past 4 years.
+            Currently working as a Powershell developer, he is pursuing a degree of Computer Engineering at UWM.</p>
+        <p>Antonio Moctezuma - From Racine, Wisconsin studies at UWM and is majoring in Applied Mathematics and Computer Science.</p>
         <p>Angelo Poulos - From Chicago, Illinois, is a current student at UWM, studying Computer Science.</p>
     </div>
-
 </div>
 
 {% endblock %}
