added pic to limitations

--- a/HTML/PhysicalLimitations.html
+++ b/HTML/PhysicalLimitations.html
@@ -21,6 +21,9 @@
         Each neuron fires about 200 times a second. Since the neurons are slow firing, they work concurrently with each other.
         In comparison, a computer can perform several billion operations per second.
         </p>
+        <p align="center">
+            <img src="../content/limitations/lego-rubik.png" alt="LegoRubik">
+        </p>
         <p>
         Current estimates believe that if a computer could be constructed that is about 10,000 times faster than a desktop computer, that it can hold the computational ability of a human brain.
         Today's limitations exist not from hardware, but from software. No one knows how to write the software.
@@ -41,7 +44,9 @@
         Google's self driving car is a very good representation of a long-term study with artificial intelligence in real world scenarios.
         Sensors detect objects and are passed into the software, which determines objects based on their size, shape, and movement pattern.
         <a href="https://www.google.com/selfdrivingcar/how/">Google's about page has a great explanation of how the car interacts with its environment.</a>
-        <img src="../content/limitations/google-self-driven-car_fig1.jpg" alt="SelfDrivingCar">
+        </p>
+        <p align="center">
+            <img src="../content/limitations/google-self-driven-car_fig1.jpg" alt="SelfDrivingCar">
         </p>
         <p>
         Google's director of engineering, Ray Kurzweil, in 2014, suggested that the only way it would be possible construct humanistic artificial intelligence, would be by mapping the entire human brain to the sub-cellular level.
