First final draft

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -21,6 +21,7 @@
         <p>Vincenzo Mustich - from Brindisi, Italy has been living in Milwaukee for the past 4 years.
             Currently working as a Powershell developer, he is pursuing a degree of Computer Engineering at UWM.</p>
         <p>Antonio Moctezuma - From Racine, Wisconsin studies at UWM and is majoring in Applied Mathematics and Computer Science.</p>
+        <p>Ryne Puffer - From Milwaukee, Wisconsin, is currently studying Computer Engineering at UWM.</p>
         <p>Angelo Poulos - From Chicago, Illinois, is a current student at UWM, studying Computer Science.</p>
     </div>
 </div>
