--- a/HTML/PolicyVacuums.html
+++ b/HTML/PolicyVacuums.html
@@ -23,7 +23,7 @@
             “Autonomous and semi-autonomous weapon systems shall be designed to allow commanders and operators to exercise appropriate
             levels of human judgement over the use of force.”
             “Human supervised autonomous weapons systems may be used to select and engage targets, with the exception of human targets,
-            for local defense to intercept time critical or saturation attempts. . .”
+            for local defense to intercept time critical or saturation attempts.”
         </p>
         <p>
             The above two quotes were ones that I found to be very significant when it came to the policies that are associated with AI.
