--- a/HTML/master.html
+++ b/HTML/master.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="sideBar">
-    <ul>Topics
+    <ul>TOPICS
         <li><a href="/topics/Morality">Morality</a></li>
         <li><a href="/topics/Frameworks">Frameworks</a></li>
         <li><a href="/topics/Challenges">Challenges</a></li>
